# tsn-zonal-backbone

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
cmake/: Toolchain-aarch64-imx8x.cmake
docs/: architecture.md  safety_case_summary.md
docs/compliance/: nist-csf-mapping.md  openchain-iso18974.md  openchain-iso5230.md
docs/test_reports/: unit_test_log_v1.0.1.txt  unit_test_log_v1.1.0.txt  unit_test_report_v1.0.1.md  unit_test_report_v1.1.0.md
examples/: zonal_gateway_demo.cpp
include/norxs/tsn/: FrerManager.hpp  GateControlManager.hpp  PtpClockManager.hpp  SwitchHal.hpp  TsnOrchestrator.hpp  TsnTypes.hpp
sbom/: tsn-zonal-backbone-1.1.0.spdx.json
src/: FrerManager.cpp  GateControlManager.cpp  PtpClockManager.cpp  TsnOrchestrator.cpp
tests/: test_FrerManager.cpp  test_GateControlManager.cpp  test_PtpClockManager.cpp  test_TsnOrchestrator.cpp
